add wesbos js30

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "nlw/feedback-widget"]
 	path = nlw/feedback-widget
 	url = https://github.com/gabrielcarloto/feedback-widget.git
+[submodule "wesbos/javascript-30"]
+	path = wesbos/javascript-30
+	url = https://github.com/gabrielcarloto/javascript-30.git
